docs/api/qiskit/0.26/qiskit.providers.ibmq.runtime.UserMessenger.mdx
---
title: UserMessenger (v0.26)
description: API reference for qiskit.providers.ibmq.runtime.UserMessenger in qiskit v0.26
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.runtime.UserMessenger
---

<span id="qiskit-providers-ibmq-runtime-usermessenger" />

# qiskit.providers.ibmq.runtime.UserMessenger

<Class id="qiskit.providers.ibmq.runtime.UserMessenger" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.13/qiskit/providers/ibmq/runtime/program/user_messenger.py" signature="UserMessenger" modifiers="class">
  Base class for handling communication with program users.

  This class can be used when writing a new Qiskit Runtime program.

  ### \_\_init\_\_

  <Function id="qiskit.providers.ibmq.runtime.UserMessenger.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                     |                  |
  | --------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------- |
  | [`__init__`](#qiskit.providers.ibmq.runtime.UserMessenger.__init__ "qiskit.providers.ibmq.runtime.UserMessenger.__init__")()                        | Initialize self. |
  | [`publish`](#qiskit.providers.ibmq.runtime.UserMessenger.publish "qiskit.providers.ibmq.runtime.UserMessenger.publish")(message\[, encoder, final]) | Publish message. |

  ### publish

  <Function id="qiskit.providers.ibmq.runtime.UserMessenger.publish" signature="publish(message, encoder=<class 'qiskit.providers.ibmq.runtime.utils.RuntimeEncoder'>, final=False)">
    Publish message.

    You can use this method to publish messages, such as interim and final results, to the program user. The messages will be made immediately available to the user, but they may choose not to receive the messages.

    The final parameter is used to indicate whether the message is the final result of the program. Final results may be processed differently from interim results.

    **Parameters**

    *   **message** (`Any`) – Message to be published. Can be any type.
    *   **encoder** (`Type`\[`JSONEncoder`]) – An optional JSON encoder for serializing
    *   **final** (`bool`) – Whether the message being published is the final result.

    **Return type**

    `None`
  </Function>
</Class>

